<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/ll_pattern"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_pattern"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="104dp"
            />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_pattern"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/dam"
            android:gravity="center"
            android:text="@string/creat_pattern"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pass_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_pattern"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/dam"
            android:gravity="center"
            android:text="@string/pattern_wrong"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.andrognito.patternlockview.PatternLockView
            android:id="@+id/patter_lock_view"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            app:aspectRatio="square"
            app:aspectRatioEnabled="true"
            app:dotAnimationDuration="150"

            app:dotCount="3" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="com.andrognito.pinlockviewapp.SampleActivity">

        <ImageView
            android:id="@+id/iv_pin"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="104dp">
        </ImageView>

        <TextView
            android:id="@+id/tv_pass_pin"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_pin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/dam"
            android:gravity="center"
            android:text="@string/craet_pin"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pass_pin_wrong"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_pin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/dam"
            android:gravity="center"
            android:text="@string/pin_wrong"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.andrognito.pinlockview.IndicatorDots
            android:id="@+id/indicator_dots_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp" />

        <com.andrognito.pinlockview.PinLockView
            android:id="@+id/pin_lock_view_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/indicator_dots_pin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            app:keypadButtonSize="54dp"
            app:keypadDeleteButtonPressedColor="#4aa8ff"
            app:keypadHorizontalSpacing="30dp"
            app:keypadShowDeleteButton="true"
            app:keypadTextColor="@color/white"
            app:keypadTextSize="18dp"
            app:keypadVerticalSpacing="30dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


